# micar-register-observatory

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  refresh.yml  verify-content.yml
data/: changelog.jsonl  latest.json
data/snapshots/: 2026-07-13.json  2026-07-20.json
docs/: feed.json  methodology.md
src/observatory/: __main__.py  config.py  content_verify.py  coverage.py  diff.py  fetch.py  models.py  normalize.py  render.py  store.py
tests/: test_content_verify.py  test_coverage.py  test_diff.py  test_normalize.py  test_pipeline.py  test_verification_pipeline.py
tests/fixtures/: art-wp.csv  casps.csv  emt-wp.csv  ncasp.csv  other-wp.csv
