[project]
name = "micar-register-observatory"
version = "0.2.0"
description = "Reproducible ESMA MiCAR register diffs with URL-shape and byte-level white-paper format evidence."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "Sebastian Förste" }]
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/observatory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
